--- a/blog.html
+++ b/blog.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Jadyn Worthington Blog</h1>
+    
+    <p>Hello my name is Jadyn Worthington </p>
+    <h3>About</h3>
+    <p>
+        Current sophmore computer science student interested into robotics and machine learning
+    </p>
+    <h3>Skills</h3>
+    <li>Java</li>
 </body>
 </html>
